Bug 375098 - DrKonqi is unable to file akonadiserver bugs
Summary: DrKonqi is unable to file akonadiserver bugs
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: server (other bugs)
Version First Reported In: 5.4.1
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-01-15 16:48 UTC by Denis Kurz
Modified: 2017-01-16 14:06 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 16.12.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Denis Kurz 2017-01-15 16:48:48 UTC
In case of an Akonadi crash, DrKonqi tells me in the "General" tab:

"We are sorry, akonadiserver closed unexpectedly.
You cannot report this error, because akonadiserver does not provide a bug reporting address."

Steps to reproduce:
1. Make akonadiserver crash
2. Click "Report error" in the crash notification

Reproducible: Always
Comment 1 Daniel Vrátil 2017-01-16 14:06:54 UTC
Git commit 3eb4e23baa4f15509598ecf22299b3bc01d2fc7e by Daniel Vrátil.
Committed on 16/01/2017 at 14:05.
Pushed by dvratil into branch 'Applications/16.12'.

Set KAboutData so that DrKonqi can report bugs

KCrash reads bug submission address from KAboutData, so we need to
set it, otherwise it's not possible to upload backtraces from DrKonqi
when crash happens. This is onl for akonadiserver, akonadi_control and
akonadictl.
FIXED-IN: 16.12.2

M  +1    -0    src/akonadicontrol/CMakeLists.txt
M  +10   -0    src/akonadicontrol/main.cpp
M  +1    -0    src/akonadictl/CMakeLists.txt
M  +11   -0    src/akonadictl/main.cpp
M  +1    -0    src/server/CMakeLists.txt
M  +11   -0    src/server/main.cpp

https://commits.kde.org/akonadi/3eb4e23baa4f15509598ecf22299b3bc01d2fc7e