Set KAboutData so that DrKonqi can report bugs

KCrash reads bug submission address from KAboutData, so we need to
set it, otherwise it's not possible to upload backtraces from DrKonqi
when crash happens. This is onl for akonadiserver, akonadi_control and
akonadictl.

BUG: 375098
FIXED-IN: 16.12.2